--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,15 @@ jobs:
           go-version-file: 'go.mod'
           cache: true
       - run: go mod download
-      - run: go test -v -cover -timeout=5m ./...
+      - run: go test -v -coverprofile=coverage.out -timeout=5m ./...
+      - name: Check coverage threshold
+        run: |
+          coverage=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
+          echo "Test coverage: ${coverage}%"
+          if (( $(echo "$coverage < 60" | bc -l) )); then
+            echo "Coverage ${coverage}% is below the required 60% threshold"
+            exit 1
+          fi
 
   fmt:
     name: Go fmt
